REFACTOR : Jpa Repository 기반으로 변경